--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
 		<p><img src="people4.jpg" alt="#4"></p>
 
-		<p><img src="people5.jpg" alt="#5"></p>
+		<p><img src="people5.png" alt="#5"></p>
 
 		<p><img src="people6.jpg" alt="#6"></p>
 
 		<p><img src="people7.jpg" alt="#7"></p>
-			<br>
 			<input type="submit">
 		</form>
 	</body>
