--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<script src="text/javascript"></script>
+		<script src="mturk.js"></script>
 	</head>
 	<body style>
 		How many recognizable people are in each image? Please look at each image carefully.
