--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 	<body style>
 		How many recognizable people are in each image? Please look at each image carefully.
     
-		<p><img src="people1.jpg" alt="#1" width=64></p>
+		<p><img src="people1.jpg" alt="#1" width=256></p>
 
-		<p><img src="people2.jpg" alt="#2" width=64></p>
+		<p><img src="people2.jpg" alt="#2" width=256></p>
 
-		<p><img src="people3.jpg" alt="#3" width=64></p>
+		<p><img src="people3.jpg" alt="#3" width=256></p>
 
-		<p><img src="people4.jpg" alt="#4" width=64></p>
+		<p><img src="people4.jpg" alt="#4" width=256></p>
 
-		<p><img src="people5.png" alt="#5" width=64></p>
+		<p><img src="people5.png" alt="#5" width=256></p>
 
-		<p><img src="people6.jpg" alt="#6" width=64></p>
+		<p><img src="people6.jpg" alt="#6" width=256></p>
 
-		<p><img src="people7.jpg" alt="#7" width=64></p>
+		<p><img src="people7.jpg" alt="#7" width=256></p>
 		
-		<input type="text" name="people" width=64>
+		<input type="text" name="people" height=256>
 		<input type="submit">
 		</form>
 	</body>
