--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<body style>
 		How many recognizable people are in each image? Please look at each image carefully.
     
-		<p><img src="people1.jpg" alt="#1" width=200></p>
+		<p>#1<br><img src="people1.jpg" alt="#1" width=200></p>
 
-		<p><img src="people2.jpg" alt="#2" width=200></p>
+		<p>#2<br><img src="people2.jpg" alt="#2" width=200></p>
 
 		<p><img src="people3.jpg" alt="#3" width=200></p>
 
