--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<script src="mturk.js"></script>
 	</head>
 	<body style>
-		How many recognizable people are in each image? Please look at each image carefully.
+		<h1>How many recognizable people are in each image? Please look at each image carefully.</h1>
+		
+		<p>Example 1: 5 people<br><img src="example1.jpg" alt="#1" width=512></p>
+		
+		<p>Example 2: 6 people<br><img src="example2.jpg" alt="#2" width=512></p>
     
 		<p>#1<br><img src="people1.jpg" alt="#1" width=512></p>
 
