--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<p>#7<br><img src="people7.jpg" alt="#7" width=512></p>
 		
-		<input type="text" name="people" rows="7" cols="50">
+		<textarea name="people" style="width:250px;height:150px;"></textarea>
 		<input type="submit">
 		</form>
 	</body>
