--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<p>Example 1: 5 people<br><img src="example1.jpg" alt="#1" width=512></p>
 		
 		<p>Example 2: 6 people<br><img src="example2.jpg" alt="#2" width=512></p>
+		
+		<p>Example 3: 3 people<br><img src="example3.jpeg" alt="#2" width=512></p>
     
 		<p>#1<br><img src="people1.jpg" alt="#1" width=512></p>
 
