--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 		<p>#5<br><img src="people5.png" alt="#5" width=512></p>
 
 		<p>#6<br><img src="people6.jpg" alt="#6" width=512></p>
+		<p><span id="numberofpeople">0</span> "people found"
 
 		<p>#7<br><img src="people7.jpg" alt="#7" width=512></p>
 		
