--- a/index.html
+++ b/index.html
@@ -88,10 +88,17 @@
 		<p>#5<br><img src="people5.png" alt="#5" width=512></p>
 
 		<p>#6<br><img src="people6.jpg" alt="#6" width=512></p>
-		<p><span id="numberofpeople">0</span> "people found"
+		<p><span id="numberofpeople">0</span> people found</p>
 
 		<p>#7<br><img src="people7.jpg" alt="#7" width=512></p>
 		
+		<form id="mturk_form">
+			<p>
+				<input id="numclickfield" type="hidden" name="numclicks">
+				<input id="numkeydowns" type="hidden" name="keydowns">
+				<input id="numberofpoeplefield" type="hidden" name="numberofpeople">
+				<input id="history" type="hidden" name="history">
+			</p>
 		<textarea name="people" style="width:250px;height:150px;"></textarea>
 		<input type="submit">
 		</form>
