--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 				<input id="numkeydowns" type="hidden" name="keydowns">
 				<input id="numberofpoeplefield" type="hidden" name="numberofpeople">
 				<input id="history" type="hidden" name="history">
+				<input type="text" name="people">
 			</p>
 
 		<p>#7<br><img src="people7.jpg" alt="#7" width=512></p>
