--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script src="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="mturk.js"></script>
 		<script>
 		var numclicks = 0;
@@ -215,7 +216,7 @@
 	</style>
 	</head>
 	<body>
-		<h1>How many recognizable people are in each image? Please look at each image carefully.</h1>
+		<h1>How many recognizable people are in each image? Please look at each image carefully and click the heads.</h1>
 		
 		<p>Example 1: 5 people<br><img src="example1.jpg" alt="#1" width=512></p>
 		
