--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
 			var numclicks5 = 0;
 			var numclicks6 = 0;
 			var numclicks7 = 0;
-    			var keydowns = 0;
-			var keydowns2 = 0;
-			var keydowns3 = 0;
-			var keydowns4 = 0;
-			var keydowns5 = 0;
-			var keydowns6 = 0;
-			var keydowns7 = 0;
 
       			var addedelements = [];
 
@@ -41,8 +34,8 @@
         				$(elem).remove();
 
         				numclicks--;
-        				$("#numberofpeople").text(numclicks);
-        				$("#numberofpeoplefield").val(numclicks);       
+        				$("#numberofpeople1").text(numclicks);
+        				$("#numberofpeoplefield1").val(numclicks);       
       				}
 
       				function removeElementEvent(e) {
@@ -75,8 +68,8 @@
         				$(elem).remove();
 
         				numclicks2--;
-        				$("#numberofpeople").text(numclicks2);
-        				$("#numberofpeoplefield").val(numclicks2);       
+        				$("#numberofpeople2").text(numclicks2);
+        				$("#numberofpeoplefield2").val(numclicks2);       
       				}
 
       				function removeElementEvent(e) {
@@ -109,8 +102,8 @@
         				$(elem).remove();
 
         				numclicks3--;
-        				$("#numberofpeople").text(numclicks3);
-        				$("#numberofpeoplefield").val(numclicks3);       
+        				$("#numberofpeople3").text(numclicks3);
+        				$("#numberofpeoplefield3").val(numclicks3);       
       				}
 
       				function removeElementEvent(e) {
@@ -143,8 +136,8 @@
         				$(elem).remove();
 
         				numclicks4--;
-        				$("#numberofpeople").text(numclicks4);
-        				$("#numberofpeoplefield").val(numclicks4);       
+        				$("#numberofpeople4").text(numclicks4);
+        				$("#numberofpeoplefield4").val(numclicks4);       
       				}
 
       				function removeElementEvent(e) {
@@ -177,8 +170,8 @@
         				$(elem).remove();
 
         				numclicks5--;
-        				$("#numberofpeople").text(numclicks5);
-        				$("#numberofpeoplefield").val(numclicks5);       
+        				$("#numberofpeople5").text(numclicks5);
+        				$("#numberofpeoplefield5").val(numclicks5);       
       				}
 
       				function removeElementEvent(e) {
@@ -211,8 +204,8 @@
         				$(elem).remove();
 
         				numclicks6--;
-        				$("#numberofpeople").text(numclicks6);
-        				$("#numberofpeoplefield").val(numclicks6);       
+        				$("#numberofpeople6").text(numclicks6);
+        				$("#numberofpeoplefield6").val(numclicks6);       
       				}
 
       				function removeElementEvent(e) {
@@ -245,8 +238,8 @@
         				$(elem).remove();
 
         				numclicks7--;
-        				$("#numberofpeople").text(numclicks7);
-        				$("#numberofpeoplefield").val(numclicks7);       
+        				$("#numberofpeople7").text(numclicks7);
+        				$("#numberofpeoplefield7").val(numclicks7);       
       				}
 
       				function removeElementEvent(e) {
@@ -300,43 +293,37 @@
 		<p>#1<br><img id="image1" src="people1.jpg" alt="#1" width=512></p>
 		<p><span id="numberofpeople1">0</span> people found (test)</p>
 			<p>
-				<input id="numclickfield1" type="hidden" name="numclicks1">
-				<input id="numkeydowns1" type="hidden" name="keydowns1">
+				<input id="numclickfield1" type="hidden" name="numclicks">
 				<input id="numberofpoeplefield1" type="hidden" name="numberofpeople1">
 			</p>
 		<p>#2<br><img id="image2" src="people2.jpg" alt="#2" width=512></p>
 		<p><span id="numberofpeople2">0</span> people found</p>
 			<p>
 				<input id="numclickfield2" type="hidden" name="numclicks2">
-				<input id="numkeydowns2" type="hidden" name="keydowns2">
 				<input id="numberofpoeplefield2" type="hidden" name="numberofpeople2">
 			</p>
 		<p>#3<br><img id="image3" src="people3.jpg" alt="#3" width=512></p>
 		<p><span id="numberofpeople3">0</span> people found</p>
 			<p>
 				<input id="numclickfield3" type="hidden" name="numclicks3">
-				<input id="numkeydowns3" type="hidden" name="keydowns3">
 				<input id="numberofpoeplefield3" type="hidden" name="numberofpeople3">
 			</p>
 		<p>#4<br><img id="image4" src="people4.jpg" alt="#4" width=512></p>
 		<p><span id="numberofpeople4">0</span> people found</p>
 			<p>
 				<input id="numclickfield4" type="hidden" name="numclicks4">
-				<input id="numkeydowns4" type="hidden" name="keydowns4">
 				<input id="numberofpoeplefield4" type="hidden" name="numberofpeople4">
 			</p>
 		<p>#5<br><img id="image5" src="people5.png" alt="#5" width=512></p>
 		<p><span id="numberofpeople5">0</span> people found</p>
 			<p>
 				<input id="numclickfield5" type="hidden" name="numclicks5">
-				<input id="numkeydowns5" type="hidden" name="keydowns5">
 				<input id="numberofpoeplefield5" type="hidden" name="numberofpeople5">
 			</p>
 		<p>#6<br><img id="image6" src="people6.jpg" alt="#6" width=512></p>
 		<p><span id="numberofpeople6">0</span> people found</p>
 			<p>
 				<input id="numclickfield6" type="hidden" name="numclicks6">
-				<input id="numkeydowns6" type="hidden" name="keydowns6">
 				<input id="numberofpoeplefield6" type="hidden" name="numberofpeople6">
 			</p>
 
@@ -344,7 +331,6 @@
 		<p><span id="numberofpeople7">0</span> people found</p>
 			<p>
 				<input id="numclickfield7" type="hidden" name="numclicks7">
-				<input id="numkeydowns7" type="hidden" name="keydowns7">
 				<input id="numberofpoeplefield7" type="hidden" name="numberofpeople7">
 			</p>
 		<br>
