--- a/index.html
+++ b/index.html
@@ -281,13 +281,14 @@
 	</style>
 	</head>
 	<body>
-		<h1>How many recognizable people are in each image? Please look at each image carefully and click the heads.</h1>
+		<h1>How many recognizable people are in each image? Please look at each image carefully and click on the heads.</h1>
 		
 		<p>Example 1: 5 people<br><img src="example1.jpg" alt="#1" width=512></p>
 		
-		<p>Example 2: 6 people<br><img src="example2.jpg" alt="#2" width=512></p>
+		<p>Example 2: 6 people (more than half a head is visible)<br><img src="example2.jpg" alt="#2" width=512></p>
 		
-		<p>Example 3: 3 people<br><img src="example3.jpeg" alt="#2" width=512></p>
+		<p>Example 3: 3 people (less than a half a head is visible, so the person behind the person on the left doesn't count
+		<br><img src="example3.jpeg" alt="#2" width=512></p>
     
 		<form id="mturk_form">
 		<p>#1<br><img id="image1" src="people1.jpg" alt="#1" width=512></p>
